add mathjax in index page

--- a/hubpress/index.html
+++ b/hubpress/index.html
@@ -18,7 +18,10 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/codemirror.spell-checker/latest/spell-checker.min.css"> -->
-
+             <script type="text/javascript" async
+                       src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+             </script>
+		
         <script src="scripts/vendors/modernizr.js"></script>
         <!-- build:js scripts/vendor/modernizr.js
         <script src="bower_components/modernizr/modernizr.js"></script>-->
